Change log for Bos Wars
-----------------------

Development version:
- Add the heli unit (Johannes Engelhardt and Francois Beerten)
- Add the big gun turret (Johannes Engelhardt and Francois Beerten)
- Support lua 5.1 only (Jimmy Salmon and Francois Beerten)
- New patch based map system (Jimmy Salmon)

Version 2.5.1:
- Fixed crash in savegames with destroyed buildings seen by other players (Jimmy Salmon)

Version 2.5.0 (2008 3 1):
- Free OpenGL textures before changing video mode since not all platforms
destroy the OpenGL context (Jimmy Salmon)
- Fix crash where graphics were loaded before the video subsystem was
started (Francois Beerten)
- Remove runtime libraries from the repository (Francois Beerten)
- Don't let an engineer build on top of itself (Jimmy Salmon)
- Allow recycling buildings under construction (Jimmy Salmon)
- Set the start position in campaign level 5 (Jimmy Salmon)
- Fix engineer build icons. (Francois Beerten)

Version 2.5.0 prerelease (2008 1 26):
- Replace magnifying glass cursor by a variant of the elites claw cursor.
(Francois Beerten)
- Fix screenshots at 16bpp (Jimmy Salmon)
- Show if the user cheated on the results screen (Jimmy Salmon)
- Add wetlands02 map (Lois Taulelle and llearch n'n'daCorna)
- Make the particle based explosions configureable (Francois Beerten)
- Fixed bug selecting a map in a subdir (Jimmy Salmon)
- Fix unload button on the APC unit (llearch n'n'daCorna) 
- Auto repair while patrolling (Jimmy Salmon)
- Added patrol button for engineer (Jimmy Salmon)
- Enable auto repair for engineers (Jimmy Salmon)
- Check for queued orders after harvesting a resource (Jimmy Salmon)
- Don't flush orders when repairing a building under construction (Jimmy Salmon)
- Don't create unnecessary flip images, saves a lot of mem (Jimmy Salmon and Francois Beerten)
- Camps can train engineers (Francois Beerten)
- Fix crash when killing a rafflesia (Francois Beerten)
- Added Swedish translation (Olov Gustavsson)